--- a/public/assets/common/css/source/custom.css
+++ b/public/assets/common/css/source/custom.css
@@ -419,6 +419,10 @@ only screen and (max-width: 760px),
 
 	td.mobile.flaw:nth-of-type(1):before { content: "Недостаток"; }
 	td.mobile.flaw:nth-of-type(2):before { content: "Стоимость"; }
+
+	td.mobile.merit:nth-of-type(1):before { content: "Достоинство"; }
+	td.mobile.merit:nth-of-type(2):before { content: "Требования"; }
+	td.mobile.merit:nth-of-type(3):before { content: "Стоимость"; }
 }
 
 @media
